--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,11 +13,12 @@
    },
    "content_scripts": [
       {
-         "matches": ["<all_urls>"],
-         "js": ["content.js"]
+         "matches": ["http://*/*", "https://*/*"],
+         "js": ["content.js"],
+         "css": ["content.css"]
       }
    ],
-   "permissions": ["storage", "activeTab", "scripting"],
+   "permissions": ["contextMenus", "storage", "activeTab", "scripting"],
    "icons": {
       "16": "icon.png",
       "48": "icon.png",
