--- a/package.json
+++ b/package.json
@@ -4,20 +4,22 @@
    "version": "0.0.0",
    "type": "module",
    "scripts": {
+      "dev:main": "vite build --config vite.config.ts --watch",
+      "dev:content": "vite build --config vite.content.config.ts --watch",
+      "dev": "npm-run-all --parallel dev:*",
       "build:main": "vite build --config vite.config.ts",
       "build:content": "vite build --config vite.content.config.ts",
       "build": "npm run build:main && npm run build:content",
-      "dev": "vite",
       "lint": "eslint .",
       "preview": "vite preview"
    },
    "dependencies": {
+      "postcss-safe-parser": "^7.0.1",
       "react": "^19.1.1",
       "react-dom": "^19.1.1"
    },
    "devDependencies": {
       "@eslint/js": "^9.36.0",
-      "@tailwindcss/postcss": "^4.1.13",
       "@types/chrome": "^0.1.12",
       "@types/node": "^24.5.2",
       "@types/react": "^19.1.13",
@@ -28,9 +30,10 @@
       "eslint-plugin-react-hooks": "^5.2.0",
       "eslint-plugin-react-refresh": "^0.4.20",
       "globals": "^16.4.0",
+      "npm-run-all": "^4.1.5",
       "postcss": "^8.5.6",
       "prettier": "^3.6.2",
-      "tailwindcss": "^4.1.13",
+      "tailwindcss": "^3.4.17",
       "typescript": "~5.8.3",
       "typescript-eslint": "^8.44.0",
       "vite": "^7.1.7"
