--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,8 +14,7 @@
    "content_scripts": [
       {
          "matches": ["http://*/*", "https://*/*"],
-         "js": ["content.js"],
-         "css": ["content.css"]
+         "js": ["content.js"]
       }
    ],
    "permissions": ["contextMenus", "storage", "activeTab", "scripting"],
