--- a/public/manifest.json
+++ b/public/manifest.json
@@ -22,5 +22,11 @@
       "16": "icon.png",
       "48": "icon.png",
       "128": "icon.png"
-   }
+   },
+   "web_accessible_resources": [
+      {
+         "resources": ["fonts/*.woff2"],
+         "matches": ["<all_urls>"]
+      }
+   ]
 }
