--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
    "version": "0.0.0",
    "type": "module",
    "scripts": {
-      "generate:tw": "tsx scripts/gen-tw-meta.ts",
-      "dev:css:once": "tailwindcss -i ./src/global.css -o ./src/tailwind.css",
+      "meta:generate": "tsx scripts/gen-tw-meta.ts full && tsx scripts/gen-tw-tokens.ts",
+      "meta:fix": "node fix-variant-order.js",
+      "meta:build": "npm run meta:generate && npm run meta:fix && npx tailwindcss -c ./scripts/tailwind.meta.config.js -i ./src/tw-meta.entry.css -o ./src/tw-meta.built.css --minify",
       "dev:css": "tailwindcss -i ./src/global.css -o ./src/tailwind.css --watch",
       "dev:main": "vite build --config vite.config.ts --watch",
       "dev:content": "vite build --config vite.content.config.ts --watch",
-      "dev": "npm run generate:tw  && npm run dev:css:once && npm-run-all --parallel dev:css dev:main dev:content",
+      "dev": "npm run meta:build && npm-run-all --parallel dev:css dev:main dev:content",
       "build:css": "tailwindcss -i ./src/global.css -o ./src/tailwind.css --minify",
       "build:main": "vite build --config vite.config.ts",
       "build:content": "vite build --config vite.content.config.ts",
-      "build": "npm run generate:tw && npm run build:css && npm run build:main && npm run build:content",
+      "build": "npm run meta:build && npm run build:css && npm run build:main && npm run build:content",
       "lint": "eslint ."
    },
    "dependencies": {
@@ -40,6 +41,7 @@
       "postcss": "^8.5.6",
       "prettier": "^3.6.2",
       "tailwindcss": "^3.4.17",
+      "tsx": "^4.19.1",
       "typescript": "~5.8.3",
       "typescript-eslint": "^8.44.0",
       "vite": "^7.1.7"
