--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
       "fuse.js": "^7.1.0",
       "postcss-safe-parser": "^7.0.1",
       "react": "^19.1.1",
+      "react-colorful": "^5.6.1",
       "react-dom": "^19.1.1"
    },
    "devDependencies": {
@@ -31,8 +32,9 @@
       "@types/node": "^24.5.2",
       "@types/react": "^19.1.13",
       "@types/react-dom": "^19.1.9",
-      "@vitejs/plugin-react": "^5.0.3",
+      "@vitejs/plugin-react": "^5.1.0",
       "autoprefixer": "^10.4.21",
+      "chrome-types": "^0.1.384",
       "eslint": "^9.36.0",
       "eslint-plugin-react-hooks": "^5.2.0",
       "eslint-plugin-react-refresh": "^0.4.20",
