--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
       "dev:css": "tailwindcss -i ./src/global.css -o ./src/tailwind.css --watch",
       "dev:main": "vite build --config vite.config.ts --watch",
       "dev:content": "vite build --config vite.content.config.ts --watch",
-      "dev": "npm run meta:build && npm-run-all --parallel dev:css dev:main dev:content",
+      "dev": "npm run dump-config && npm run meta:build && npm-run-all --parallel dev:css dev:main dev:content",
       "build:css": "tailwindcss -i ./src/global.css -o ./src/tailwind.css --minify",
       "build:main": "vite build --config vite.config.ts",
       "build:content": "vite build --config vite.content.config.ts",
-      "build": "npm run meta:build && npm run build:css && npm run build:main && npm run build:content",
-      "lint": "eslint ."
+      "build": "npm run dump-config && npm run meta:build && npm run build:css && npm run build:main && npm run build:content",
+      "lint": "eslint .",
+      "dump-config": "tsx scripts/dump-config.js"
    },
    "dependencies": {
       "@fontsource/inter": "^5.2.8",
