--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
       "@vitejs/plugin-react": "^5.1.0",
       "autoprefixer": "^10.4.21",
       "chrome-types": "^0.1.384",
+      "esbuild": "^0.25.12",
       "eslint": "^9.36.0",
       "eslint-plugin-react-hooks": "^5.2.0",
       "eslint-plugin-react-refresh": "^0.4.20",
