--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
       "@fontsource/inter": "^5.2.8",
       "@heroicons/react": "^2.2.0",
       "fuse.js": "^7.1.0",
+      "lucide-react": "^0.554.0",
       "postcss-safe-parser": "^7.0.1",
       "react": "^19.1.1",
       "react-colorful": "^5.6.1",
